- include part of udev's hwdb (mga#20327)

Version 17.88 - 7 July 2017

- translation updates

Version 17.87 - 25 June 2017

- left background image for Mageia 6 final

Version 17.86 - 23 June 2017

- increase the default window size of the installer to 1024x768 (mga#20624)

Version 17.85 - 22 June 2017

- don't overwrite custom grub2 settings when upgrading (mga#20596)
- recognize 8812au (mga#21043)

Version 17.84 - 5 June 2017

- translation updates

Version 17.83 - 4 June 2017

- log output of libinput-list-devices in report.bug (mga#20327)
- translation updates

Version 17.82 - 6 May 2017

- add "please wait" message when running update-grub2

Version 17.81 - 5 May 2017

- fix missing "Configure Supplemental Installation Media" screen (mga#20484)

Version 17.80 - 3 May 2017

- updated DE selection and advertising artwork for Mageia 6

Version 17.79 - 26 April 2017

- updated translation snapshot

Version 17.78 - 4 April 2017

- new left background for Mageia 6 rc

Version 17.77 - 4 April 2017

- partitioning:
  o don't require a BIOS boot partition when performing an upgrade (mga#20338)
  o make partitioning more robust with "Use entire disk" option (mga#20619):
    * add safety net for informing the kernel after writing a DOS partition
      table.
    * speed up proc_partitions::compare() and avoid unwanted udev events.
  o force reinitialisation of partition suggestions after wiping disk
    (mga#20621)
- various fixes to do_pkgs during Live installs (mga#20620):
  o fix do_pkgs_standalone::are_installed() for Live install
  o fix do_pkgs_standalone::remove() for Live install
  o fix fast path for do_pkgs::ensure_is_installed()

Version 17.76 - 24 March 2017

- installer options handling:
  o fix default value for 'compssListLevel' (mga#20551)
    (both being post mga5 regression)

- list input & HID devices in report.bug (mga#20327)

Version 17.72 - 25 February 2017
- partitioning:
  o fix too big window due to too big translations (mga#20360)