@@ -565,7 +565,6 @@
   perl-Pango
   <!-- urpmi stack: -->
   perl-Clone
-  perl-Math-Int64
   perl-URPM
 </from>
 </filter>
