@@ -1,4 +1,5 @@
 - include part of udev's hwdb (mga#20327)
+- adapt to URPM-5.14 (using perl native ints)
 
 Version 17.88 - 7 July 2017
 
